Fix: 프론트 요청 사항 반영 (2) (#49)
* Fix: dto 변화로 인한 일부 코드 수정 (#47)

* Rename: 패키지, 파일 경로 수정 (#47)

* Rename: 패키지, 파일 경로 수정 (#47)

* Rename: 패키지, 파일 경로 수정 (#47)

* Fix: 유저 정보 변경 nickname -> name (#47)

* Fix: 유저 정보 변경 명세 nickname -> name (#47)

* Fix: 프론트 요구사항 반영 (#47)

* Fix: 명세 수정 (#47)

* Fix: sms 인증 서비스 분리 (#47)
