# src/main/java/com/gudgo/jeju/global/auth/sms/controller/SMSMessageController.java
@@ -3,14 +3,12 @@ package com.gudgo.jeju.global.auth.sms.controller;
 
 import com.gudgo.jeju.global.auth.sms.dto.SMSMessageDTO;
 import com.gudgo.jeju.global.auth.sms.dto.SMSVerificationDTO;
+import com.gudgo.jeju.global.auth.sms.dto.SMSVerificationResultResponse;
 import com.gudgo.jeju.global.auth.sms.service.SMSMessageService;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 
 @RequiredArgsConstructor
@@ -27,10 +25,15 @@ public class SMSMessageController {
 
     @PostMapping(value = "/check")
     public ResponseEntity<?> checkUserUsingVerificationCode(@RequestBody SMSVerificationDTO smsVerificationDTO) throws Exception{
-        smsMessageService.checkUsersUsingVerificationCode(smsVerificationDTO.getPhoneNumber()
-                ,smsVerificationDTO.getVerificationCode());
+        smsMessageService.checkUsersUsingVerificationCode(smsVerificationDTO);
 
-        return ResponseEntity.ok(smsVerificationDTO);
+        return ResponseEntity.ok().build();
+    }
 
+    @PostMapping(value = "/check/later")
+    public ResponseEntity<SMSVerificationResultResponse> checkUserUsingVerificationCodeAfterSignup(@RequestBody SMSVerificationDTO smsVerificationDTO) throws Exception{
+        SMSVerificationResultResponse response = smsMessageService.checkUsersUsingVerificationCodeAfterSignup(smsVerificationDTO);
+
+        return ResponseEntity.ok(response);
     }
 }
